<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- TODO: organize strings -->
    <!-- Start Color Picker Strings -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="user_tag_hint">User Tag</string>
    <!-- End Color Picker Strings -->

    <string name="gameraven">GameRaven</string>
    <string name="ioab_copyright">Copyright \u00a9 Insanity On A Bun Software</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="title">Title</string>
    <string name="titlecounter">80/80</string>
    <string name="body">Body</string>
    <string name="bodycounter">4096\n/4096</string>
    <string name="cancel">Cancel</string>
    <string name="poll">Poll…</string>
    <string name="flair">Flair…</string>
    <string name="post">Post</string>
    <string name="logged_in_as">Logged In As…</string>
    <string name="change_acc_default">Logged Out (click to change)</string>
    <string name="log_out">*Logout*</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="navigation">Navigation</string>
    <string name="boards_explore">Explore Boards</string>
    <string name="boards_favorites">Favorite Boards</string>
    <string name="board_jumper_quick_list">\n(Long Click for Quick List)</string>
    <string name="amp_list">AMP List</string>
    <string name="tracked_topics">Tracked Topics</string>
    <string name="pm_inbox">PM Inbox</string>
    <string name="pm_outbox">PM Outbox</string>
    <string name="functions">Functions</string>
    <string name="copy_curr_page">Copy Current Page URL</string>
    <string name="manage_highlight_list">Manage Highlight List</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="bug_report">Bug Report</string>
    <string name="exit_gameraven">Exit GameRaven</string>
    <string name="search">Search</string>
    <string name="unread_notifs">Unread Notifications</string>
    <string name="unread_pms">Unread Private Messages</string>
    <string name="clear_unread_notifs">Clear Unread Notifications</string>
    <string name="return_to_topic_list">Return to Topic List</string>
    <string name="filter_board">Filter Board</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="post_new_">Post new…</string>
    <string name="send_pm_to_this_user">Send PM to This User</string>
    <string name="tag_this_user">Tag This User</string>
    <string name="reply">Reply</string>
    <string name="refresh">Refresh</string>
    <string name="last_post">Last\nPost</string>
    <string name="first_unread">First\nUnread</string>
    <string name="click_to_change"> (Click to Change)</string>
    <string name="view_results">View Results</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="view_privacy_policy">View Privacy Policy</string>
    <string name="hex">HEX</string>
    <string name="username">Username</string>
    <string name="label">Label</string>
    <string name="set_color">Set Color</string>
    <string name="delete_qmark">Delete?</string>
    <string name="default_account">Default Account</string>
    <string name="use_gfaqs_sig">Use GFAQs Sig</string>
    <string name="remove_account">Remove Account</string>
    <string name="message_deleted">(message deleted)</string>
    <string name="use_poll">Use Poll</string>
    <string name="poll_title">Poll Title</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_5">Option 5</string>
    <string name="option_6">Option 6</string>
    <string name="option_7">Option 7</string>
    <string name="option_8">Option 8</string>
    <string name="option_9">Option 9</string>
    <string name="option_10">Option 10</string>
    <string name="sending">Sending…</string>
    <string name="user_tag">User Tag</string>
    <string name="user_id">User ID</string>
    <string name="user_level">User Level</string>
    <string name="account_created">Account Created</string>
    <string name="last_visit">Last Visit</string>
    <string name="signature">Signature</string>
    <string name="karma">Karma</string>
    <string name="active_messages_posted">Active Messages Posted</string>
    <string name="password">Password</string>
    <string name="recipient">Recipient</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="buyMeACoffee">{mdi-coffee 120%} Buy Me A Coffee {mdi-coffee 120%}</string>
    <string name="version">Version</string>
    <string name="buildNumber">Build Number</string>
    <string name="versionNotSet">Build version not set. Stupid developer.</string>
    <string name="sendEmail">Send email…</string>
    <string name="ok">OK</string>
</resources>
