<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/poGlobalWrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/poUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/use_poll" />

    <EditText
        android:id="@+id/poTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poUse"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/poll_title"
        android:inputType="textCapSentences"
        android:lines="1" />

    <ScrollView
        android:id="@+id/poScroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/poMinLevel"
        android:layout_below="@+id/poTitle"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout
            android:id="@+id/poOptionsWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/po1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_1"
                android:inputType="textCapSentences"
                android:lines="1" />

            <EditText
                android:id="@+id/po2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_2"
                android:inputType="textCapSentences"
                android:lines="1" />

            <EditText
                android:id="@+id/po3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_3"
                android:inputType="textCapSentences"
                android:lines="1" />

            <EditText
                android:id="@+id/po4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_4"
                android:inputType="textCapSentences"
                android:lines="1" />

            <EditText
                android:id="@+id/po5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_5"
                android:inputType="textCapSentences"
                android:lines="1" />

            <EditText
                android:id="@+id/po6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_6"
                android:inputType="textCapSentences"
                android:lines="1" />

            <EditText
                android:id="@+id/po7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_7"
                android:inputType="textCapSentences"
                android:lines="1" />

            <EditText
                android:id="@+id/po8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_8"
                android:inputType="textCapSentences"
                android:lines="1" />

            <EditText
                android:id="@+id/po9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_9"
                android:inputType="textCapSentences"
                android:lines="1" />

            <EditText
                android:id="@+id/po10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/option_10"
                android:inputType="textCapSentences"
                android:lines="1" />
        </LinearLayout>
    </ScrollView>

    <Spinner
        android:id="@+id/poMinLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:entries="@array/pollMinLevel" />

</RelativeLayout>
