<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/abtGlobalWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ioabsoftware.gameraven.views.MarqueeToolbar
        android:id="@+id/abtToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/abtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameraven"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/abtBuildVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="Version 1.2.3\nBuild Number 10203987" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ioab_copyright"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/abtBtnWrapper1"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/abtGenFeedback"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="genFeedback"
                android:text="@string/send_feedback" />

            <Button
                android:id="@+id/abtDonate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="donate"
                tools:text="[coffee]\nBuy Me A Coffee\n[coffee]" />

            <Button
                android:id="@+id/abtPrivacyPolicy"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="viewPrivacyPolicy"
                android:text="@string/view_privacy_policy" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
