<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/huWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/huName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/huLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textCapWords" />

    <LinearLayout
        android:id="@+id/huColorWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp">

        <View
            android:id="@+id/huColorSepL"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:background="#33B5E5"
            android:visibility="visible" />

        <Button
            android:id="@+id/huSetColor"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/set_color" />

        <View
            android:id="@+id/huColorSepR"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="4dp"
            android:background="#33B5E5"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/huColorVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:text="-16777216" />

</LinearLayout>
