<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/udGlobalWrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/item_padding_vertical"
    android:layout_marginTop="@dimen/item_padding_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/udTagWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/udTagLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:text="@string/user_tag"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/udTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/udTagLabel"
            android:layout_below="@+id/udTagLabel"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            tools:text="Pretty Cool Guy" />

        <View
            android:id="@+id/udTagSep"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/udTag"
            android:layout_marginBottom="@dimen/item_padding_vertical"
            android:layout_marginTop="@dimen/item_padding_vertical"
            android:background="#33B5E5"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/udIDWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/udIDLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:text="@string/user_id"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/udID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/udIDLabel"
            android:layout_below="@+id/udIDLabel"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            tools:text="3705639" />

        <View
            android:id="@+id/udIDSep"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/udID"
            android:layout_marginBottom="@dimen/item_padding_vertical"
            android:layout_marginTop="@dimen/item_padding_vertical"
            android:background="#33B5E5"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/udLevelWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/udLevelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:text="@string/user_level"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/udLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/udLevelLabel"
            android:layout_below="@+id/udLevelLabel"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            tools:text="35: Idol" />

        <View
            android:id="@+id/udLevelSep"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/udLevel"
            android:layout_marginBottom="@dimen/item_padding_vertical"
            android:layout_marginTop="@dimen/item_padding_vertical"
            android:background="#33B5E5"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/udCreationWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/udCreationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:text="@string/account_created"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/udCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/udCreationLabel"
            android:layout_below="@+id/udCreationLabel"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            tools:text="Friday, August 11, 2006 8:03 AM" />

        <View
            android:id="@+id/udCreationSep"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/udCreation"
            android:layout_marginBottom="@dimen/item_padding_vertical"
            android:layout_marginTop="@dimen/item_padding_vertical"
            android:background="#33B5E5"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/udLVisitWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/udLVisitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:text="@string/last_visit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/udLVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/udLVisitLabel"
            android:layout_below="@+id/udLVisitLabel"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            tools:text="Thursday, March 14, 2013 9:11 PM" />

        <View
            android:id="@+id/udLVisitSep"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/udLVisit"
            android:layout_marginBottom="@dimen/item_padding_vertical"
            android:layout_marginTop="@dimen/item_padding_vertical"
            android:background="#33B5E5"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/udSigWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/udSigLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:text="@string/signature"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/udSig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/udSigLabel"
            android:layout_below="@+id/udSigLabel"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            tools:text="http://www.last.fm/user/InsanityOnABun" />

        <View
            android:id="@+id/udSigSep"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/udSig"
            android:layout_marginBottom="@dimen/item_padding_vertical"
            android:layout_marginTop="@dimen/item_padding_vertical"
            android:background="#33B5E5"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/udKarmaWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/udKarmaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:text="@string/karma"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/udKarma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/udKarmaLabel"
            android:layout_below="@+id/udKarmaLabel"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            tools:text="1557" />

        <View
            android:id="@+id/udKarmaSep"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/udKarma"
            android:layout_marginBottom="@dimen/item_padding_vertical"
            android:layout_marginTop="@dimen/item_padding_vertical"
            android:background="#33B5E5"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/udAMPWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/udAMPLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:text="@string/active_messages_posted"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/udAMP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/udAMPLabel"
            android:layout_below="@+id/udAMPLabel"
            android:layout_marginLeft="@dimen/item_padding_horizontal"
            android:layout_marginRight="@dimen/item_padding_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            tools:text="252" />

        <View
            android:id="@+id/udAMPSep"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/udAMP"
            android:layout_marginBottom="@dimen/item_padding_vertical"
            android:layout_marginTop="@dimen/item_padding_vertical"
            android:background="#33B5E5"
            android:visibility="visible" />
    </RelativeLayout>

</LinearLayout>
